feat: sample of verification with ethers.js

--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
-    "verify": "node src/verify.js"
+    "verify": "node src/verify.js",
+    "verify:ethers": "node src/verify_ethers.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@hashgraph/sdk": "^2.52.0",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "ethers": "^6.13.4"
   }
 }
