--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,7 @@ CONTRACT_ID = #<0.0.1234568>
 DID_TOKEN_ID = #<did:shr:...>
 PROOF = #<keccak256 hash 1,keccak256 hash 2> without 0x prefix
 ATTRIBUTE_VALUE_HASH = #<keccak256 hash of the attribute value> without 0x prefix
+
+# ETHERSJS
+RELAY_ENDPOINT = #<https://...>
+CONTRACT_ADDRESS = #<0x...>
